@@ -1,8 +1,6 @@
 -- Code from the celestial wheather mod
 
-if mods["celestial-weather"] and settings.startup["enable-arig-weather"].value then
-  
-  local weather = {
+local cluster_particles = {
   type = "cluster",
   distance = 8,
   distance_deviation = 8,
@@ -10,17 +8,36 @@ if mods["celestial-weather"] and settings.startup["enable-arig-weather"].value t
     type = "instant",
     source_effects = {
       type = "create-trivial-smoke",
-      initial_height = 0.7,
-      speed_multiplier_deviation = 0.5,
-      starting_frame = 8,
-      starting_frame_deviation = 8,
+      initial_height = 0.6,
+      speed_multiplier_deviation = 0.2,
+      starting_frame = 512,
+      starting_frame_deviation = 1024,
       offset_deviation = {{-96, -48}, {96, 48}},
-      speed_from_center = 0.04,
-      speed_from_center_deviation = 0.2
+      speed_from_center = 0,
+      speed_from_center_deviation = 0
     }
   }
 }
 
+------ direct particles ------
+local direct_particles = {
+  type = "direct",
+  action_delivery = {
+    type = "instant",
+    source_effects = {
+      type = "create-trivial-smoke",
+      initial_height = 0.4,
+      speed_multiplier_deviation = 0.2,
+      starting_frame = 512,
+      starting_frame_deviation = 1024,
+      offset_deviation = {{-96, -48}, {96, 48}},
+      speed_from_center = 0,
+      speed_from_center_deviation = 0
+    }
+  }
+}
+
+------ fog ------
 local fog = {
   fog_type = "vulcanus",
   shape_noise_texture =
@@ -38,27 +55,103 @@ local fog = {
   tick_factor = 0.000001,
 }
 
+if mods["celestial-weather"] and settings.startup["enable-arig-weather"].value then
+
+---- Arig
 
   local arig_sand = table.deepcopy(data.raw["trivial-smoke"]["aquilo-snow-smoke"])
   arig_sand.name = "arig_sand"
   arig_sand.color = {1, 0.918, 0.78}
   arig_sand.animation.filename = "__celestial-weather__/graphics/entity/sand-particles.png",
-  data.extend{(arig_sand)}
+  data:extend({arig_sand})
 
-  local arig_weather = table.deepcopy(weather)
-  arig_weather.cluster_count = 2
+  local arig_weather = table.deepcopy(cluster_particles)
+  arig_weather.cluster_count = 8
   arig_weather.action_delivery.source_effects.smoke_name= "arig_sand"
   arig_weather.action_delivery.source_effects.speed = {-0.32, 0}
-  arig_weather.action_delivery.source_effects.speed_multiplier = 1
+  arig_weather.action_delivery.source_effects.speed_multiplier = settings.startup["arig_sand_particle-speed"].value
+
+  -- Fog
 
   local arig_fog = table.deepcopy(fog)
   arig_fog.color1 = {0.929, 0.812, 0.553, 1.0}
   arig_fog.color2 = {1, 0.929, 0.722, 1.0}
   arig_fog.tick_factor = 0.0003
   arig_fog.detail_noise_texture.filename = "__celestial-weather__/graphics/entity/dense-clouds.png"
+
 -- implement
+
   data.raw["planet"]["arig"].ticks_between_player_effects = 1
   data.raw["planet"]["arig"].player_effects =  {(arig_weather)}
   data.raw["planet"]["arig"].surface_render_parameters = data.raw["planet"]["arig"]["surface_render_parameters"] or {}
   data.raw["planet"]["arig"].surface_render_parameters["fog"] = arig_fog
+
+end
+
+
+-------------------------- Hyarion
+
+
+if mods["celestial-weather"] and settings.startup["enable-hyarion-weather"].value then
+
+hyarion_effects = {}
+
+if mods["celestial-weather"] and settings.startup["enable-hyarion-dust"].value then
+
+----- Dust
+  local hyarion_dust_particle = table.deepcopy(data.raw["trivial-smoke"]["aquilo-snow-smoke"])
+  hyarion_dust_particle.name = "hyarion_dust_particle"
+  hyarion_dust_particle.color = {0.961, 0.902, 0.914}
+  hyarion_dust_particle.animation.filename = "__celestial-weather__/graphics/entity/sand-particles.png",
+  data:extend({hyarion_dust_particle})
+
+  local hyarion_weather_d = table.deepcopy(cluster_particles)
+  hyarion_weather_d.cluster_count = 2
+  hyarion_weather_d.action_delivery.source_effects.smoke_name= "hyarion_dust_particle"
+  hyarion_weather_d.action_delivery.source_effects.speed = {0.32, 0}
+  hyarion_weather_d.action_delivery.source_effects.speed_multiplier  = settings.startup["hyarion_dust_particle-speed"].value
+
+  table.insert(hyarion_effects, hyarion_weather_d)
+
+end
+
+if mods["celestial-weather"] and settings.startup["enable-hyarion-lights"].value then
+
+-- Light particles
+  local hyarion_lights = table.deepcopy(data.raw["trivial-smoke"]["aquilo-snow-smoke"])
+  hyarion_lights.name = "hyarion-lights"
+  hyarion_lights.color = {1, 1, 1, 1}
+  hyarion_lights.animation.filename = "__celestial-weather__/graphics/entity/fire-particles.png"
+  data:extend({hyarion_lights})
+
+  local hyarion_weather_l = table.deepcopy(cluster_particles)
+  hyarion_weather_l.cluster_count = 12
+  hyarion_weather_l.action_delivery.source_effects.smoke_name= "hyarion-lights"
+  hyarion_weather_l.action_delivery.source_effects.speed = {-0.16, -0.4}
+  hyarion_weather_l.action_delivery.source_effects.speed_multiplier = settings.startup["hyarion-lights-particle-speed"].value
+
+  table.insert(hyarion_effects, hyarion_weather_l) 
+
+end
+
+if mods["celestial-weather"] and settings.startup["enable-hyarion-lights"].value then
+
+----- Fog
+  local hyarion_fog = table.deepcopy(fog)
+  hyarion_fog.color1 = {1, 1, 1, 1}
+  hyarion_fog.color2 = {1, 1, 1, 1}
+  hyarion_fog.tick_factor = 0.0002
+  hyarion_fog.detail_noise_texture.filename = "__celestial-weather__/graphics/entity/dense-clouds.png"
+
+  data.raw["planet"]["hyarion"].surface_render_parameters = data.raw["planet"]["hyarion"]["surface_render_parameters"] or {}
+  data.raw["planet"]["hyarion"].surface_render_parameters["fog"] = hyarion_fog
+
+end
+
+-- implement
+  if #hyarion_effects > 0 then
+    data.raw["planet"]["hyarion"].ticks_between_player_effects = 1
+    data.raw["planet"]["hyarion"].player_effects = hyarion_effects
+  end
+
 end
