@@ -4,3 +4,5 @@ require("compat.pelagos")
 require("compat.aquilo-trenches")
 
 data.raw["assembling-machine"]["planetaris-assembling-machine-4"].crafting_categories = data.raw["assembling-machine"]["assembling-machine-3"].crafting_categories
+
+data.raw["furnace"]["planetaris-quartz-furnace"].energy_usage = "45kW"
