@@ -99,6 +99,7 @@ planetaris-metallic-ore=Metallic ore
 planetaris-metallic-smelting=Metallic ore smelting
 planetaris-iron-metallic-sifting=Metallic ore iron sifting
 planetaris-copper-metallic-sifting=Metallic ore copper sifting
+planetaris-stone-metallic-sifting=Metallic ore stone sifting
 planetaris-polishing-compound=Polishing compound
 planetaris-polished-quartz=Polished quartz
 planetaris-advanced-raw-quartz=Advanced raw quartz
@@ -395,3 +396,11 @@ simulation-genius-3=Produce 5000 simulating units
 [mod-setting-name]
 
 enable-arig-weather=Enable Arig weather
+arig_sand_particle-speed=Arig sand particle speed
+
+enable-hyarion-weather=Enable Hyarion weather
+enable-hyarion-dust=Enable Hyarion dust
+hyarion_dust_particle-speed=Hyarion dust particle speed
+enable-hyarion-lights=Enable Hyarion lights
+hyarion-lights-particle-speed=Hyarion light particle speed
+enable-hyarion-fog=Enable Hyarion fog
